--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -246,6 +246,7 @@ footer {
 
 #acercaDe {
     padding: 3% 14% 3% 14%;
+
 }
 
 #shortDes {
@@ -266,6 +267,16 @@ footer {
     justify-content: normal;
 }
 
+/*Estilos membresias carrusel*/
+
+.carousel-container {
+    width: 60%; /* Ajusta el ancho del carrusel */
+    margin: 30px auto; /* Centra el carrusel con margen superior e inferior */
+    overflow: hidden;
+    position: relative;
+}
+
+
 .membresias-container {
     display: flex;
     flex-direction: column;
@@ -277,16 +288,28 @@ footer {
 
 .membresias-card-container {
     display: flex;
-    gap: 10px; /* Ajusta el espacio entre tarjetas */
     transition: transform 0.3s ease;
 }
 
 .membresias-card {
-    /* ... tus estilos existentes para la tarjeta ... */
-    min-width: calc(100% / 3 - 20px); /* Ajusta el ancho de la tarjeta */
-    flex: 0 0 calc(100% / 3 - 20px);
+    min-width: calc(10% / 3); /* Show 3 cards initially */
+    flex: 0 0 calc(100% / 3);
+    padding-left: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 300px; /* Ajusta el ancho a tu gusto */
+    height: 600px; /* Ajusta el alto a tu gusto */
+    overflow: hidden;
 }
 
+.card-text {
+    font-size: 22px;
+}
+
+.card-title {
+    text-align:center;
+    font-size: 40px;
+    padding-bottom:20px;
+}
 
 .membresias-card-title {
     margin-bottom: 10px;
@@ -326,29 +349,33 @@ footer {
 }
 
 .membresias-card-text {
-    max-height: 300px;
-    overflow-y: auto;
+    overflow-y: auto; /* Agrega una barra de desplazamiento vertical */
     word-wrap: break-word;
     white-space: normal;
 }
-
 .navigation {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
+    justify-content: space-between;
+    z-index: 1; /* Ensure buttons are on top */
 }
 
     .navigation button {
-        background-color: #2F3148;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
         border: none;
-        padding: 10px;
-        border-radius: 50%;
+        padding: 10px 20px;
         cursor: pointer;
+        border-radius: 50%; /* Botones circulares */
+        font-size: 20px; /* Tamaño de la flecha */
     }
 
         .navigation button:hover {
-            background-color: rgba(255, 255, 255, 1);
+            background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco al pasar el ratón */
+            color: black;
         }
 
 .dots {
@@ -369,6 +396,35 @@ footer {
     .dot.active {
         background-color: #333;
     }
+
+/* Estilos para los mensajes */
+.mensaje-suscripcion {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+    .mensaje-suscripcion .alert {
+        border: none; /* Sin borde */
+        border-radius: 10px 10px 0 0; /* Bordes redondeados solo arriba */
+        padding: 0.5rem 1rem; /* Ajusta el padding según tu preferencia */
+    }
+
+    .mensaje-suscripcion .alert-success {
+        background-color: #198754; /* Color verde de éxito */
+        color: white; /* Color del texto blanco */
+    }
+
+    .mensaje-suscripcion .alert-info {
+        background-color: #193b5f; /* Color azul de información */
+        color: white; /* Color del texto blanco */
+    }
+
+/* Estilos para el card */
+.membresias-card .card {
+    border: none; /* Sin borde en el card */
+    background-color: #1A1E23; /* Color de fondo del card */
+    color: white; /* Color del texto blanco */
+}
 
 /* Estilos para el popUp creador */
 .modal-body, .modal-content {
@@ -405,10 +461,13 @@ footer {
     width: 100%;
 }
 
+
 /* Estilos para publicaciones */
+
 .publicacion {
-    width: 80%;
-    margin-bottom: 30px;
+    /* Ajusta el ancho de las columnas */
+    width: 100%;
+    margin: 20px;
 }
 
 .carousel-control-next,
@@ -444,18 +503,23 @@ footer {
     }
 
 .imagen-publicacion {
-    width: 300px; /* Tamaño fijo para las imágenes */
-    height: auto;
+    max-height: 300px;
+    object-fit: cover; /* Para que la imagen cubra el área sin deformarse */
     border-radius: 10px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-.product-title {
-    font-size: 1.8rem;
-    color: #FFD700;
-    margin-bottom: 10px;
+
+.product-card h2 {
+    /* Ajusta el tamaño del título */
+    font-size: 24px;
+}
+
+.product-card p {
+    /* Ajusta el tamaño del texto */
+    font-size: 18px;
 }
 
 .product-description {
@@ -465,24 +529,51 @@ footer {
 }
 
 /* Estilos para comentarios */
+
+.comment-container {
+    margin: 0 auto;
+    width: 80%;
+    border: 1px solid #eee;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #212529;
+    color: #fff; /* Texto blanco */
+}
+
 .comment-item {
-    background-color: #2C3136;
+    background-color: #212529;
     border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 10px; /* Reducir el padding */
+    margin-bottom: 10px; /* Reducir el margen inferior */
+    color: #fff; /* Texto blanco */
+}
+
+.comment-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px; /* Reducir el margen inferior */
 }
 
 .replies {
-    list-style: none;
-    padding-left: 20px;
-    margin-top: 10px;
+    margin-top: 5px; /* Reducir el margen superior */
+    padding-left: 30px;
+    border-left: 2px solid #ccc;
 }
 
 .reply {
-    background-color: #3D4247;
+    margin-bottom: 5px; /* Reducir el margen inferior */
+    background-color: #1c2126;
     border-radius: 8px;
-    padding: 10px;
-    margin-bottom: 10px;
+    padding: 5px; /* Reducir el padding */
+    color: #fff; /* Texto blanco */
+}
+
+
+#imageCarousel .carousel-item img {
+    width: 600px;
+    height: 600px;
+    object-fit: cover;
 }
 
 /* Estilos para botones */
@@ -513,28 +604,12 @@ footer {
         color: black;
     }
 
-/* Media query para responsivo */
-@media (max-width: 768px) {
-    .product-card {
-        margin: 0 auto;
-    }
-
-    .section-title {
-        font-size: 2rem;
-    }
-}
-
 .profile-picture {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
     object-fit: cover;
-}
-
-/* Estilo para la sección #Perfil */
-#Perfil {
-    padding-top: 6%;
-    padding-bottom: 24%;
+    border-radius: 50%;
+    margin-right: 10px;
 }
 
 /* Estilos para la sección de comentarios (con mayor especificidad) */
@@ -545,10 +620,48 @@ footer {
     background-color: #252525;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: #fff; /* Texto blanco en la sección de comentarios */
 }
 
 .publicacion-container .add-comment {
-    background-color: #2C3136;
+    background-color: #19191A;
     border-radius: 8px;
-    padding: 20px;
+    padding: 10px; /* Reducir el padding */
+    color: #fff; /* Texto blanco */
+}
+
+.add-comment h5 {
+    margin-bottom: 10px; /* Reducir el margen inferior del título */
+}
+
+.add-comment .form-control {
+    margin-bottom: 10px; /* Reducir el margen inferior del textarea */
+}
+
+.comentario-textarea {
+    width: 70%;
+    max-width: 500px; /* Ancho máximo */
+    height: 80px;
+}
+
+/* Estilo para la sección #Perfil */
+#Perfil {
+    padding-top: 6%;
+    padding-bottom: 24%;
+}
+
+/* Media query para responsivo */
+
+@media (max-width: 768px) {
+    .product-card {
+        margin: 0 auto;
+    }
+
+    .section-title {
+        font-size: 2rem;
+    }
+
+    .comentario-textarea {
+        width: 90%; /* Ancho mayor en pantallas pequeñas */
+    }
 }
